# OpenShift-Ansible-Python-Automation

./: .env.sample  Makefile  README.md  pyproject.toml  requirements.txt  structure.txt
ansible/: ansible.cfg
ansible/playbooks/: deploy.yml  hooks.yml  rollback.yml
ansible/roles/app_deploy/tasks/: deploy.yml  post.yml  pre.yml
ci/github/workflows/: cicd.yml
cicd/: cli.py
openshift/manifests/: deployment.yaml.j2  rbac.yaml  route.yaml.j2  service.yaml.j2  serviceaccount.yaml
tests/: test_cli.py
